fixed bug where the text would overflow horizontally

--- a/style.css
+++ b/style.css
@@ -22,13 +22,14 @@ h1 {
 }
 
 #calculator-display {
-    overflow-y: auto;
     border-radius: 4px;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
+    max-width: 100%;
     height: 150px;
+    overflow-y: auto;
+    overflow-x: hidden;
     background-color: rgba(243, 243, 243, 0.904);
 }
 
@@ -57,6 +58,7 @@ button:hover {
 }
 
 .content {
+    word-break: break-all;
     font-size: 20px;
     color:#243665;
     background-color:white;
